nlamah/src/main/resources/org/nlamah/QLS/test/error/widgettypemismatcherror.qls
stylesheet test
{
	page test
	{
		section "test"
		{
			question question1 widget checkbox
			question question2 widget spinbox
			question question3 widget radio("yes", "no")
		}
	}
}